# kms-framesaver

./: README.md
Documents/: making-kms-frame-saver.FilterModule.txt  making-kms-frame-saver.JavaApps.txt
KurentoModules/kms_frame_saver/: CMakeLists.txt  KURENTO.gitignore  config.h.cmake
KurentoModules/kms_frame_saver/debian/: changelog  control
KurentoModules/kms_frame_saver/original-skeleton/: CMakeLists.txt
KurentoModules/kms_frame_saver/original-skeleton/src.original/gst-plugins/: CMakeLists.txt  gstkms_frame_saver.cpp  gstkms_frame_saver.h  kms_frame_saver.c
KurentoModules/kms_frame_saver/original-skeleton/src.original/server/interface/: kms_frame_saver.kmd.json  kms_frame_saver.kms_frame_saver.kmd.json
KurentoModules/kms_frame_saver/src/gst-plugins/: CMakeLists.txt  gst_Frame_Saver_Video_Filter_Plugin.c  gst_Frame_Saver_Video_Filter_Plugin.h
KurentoModules/kms_frame_saver/src/gst-plugins/frame_saver/: frame_saver_filter.c  frame_saver_filter.h  frame_saver_filter_lib.c  frame_saver_filter_lib.h  frame_saver_params.c  frame_saver_params.h  save_frames_as_png.c  save_frames_as_png.h  wrapped_natives.c  wrapped_natives.h
KurentoModules/kms_frame_saver/src/server/implementation/objects/: FrameSaverVideoFilterImpl.cpp  FrameSaverVideoFilterImpl.hpp
KurentoModules/kms_frame_saver/src/server/interface/: framesavervideofilter.FrameSaverVideoFilter.kmd.json  framesavervideofilter.kmd.json
Validation/kms_tutorial_apps/APP-Java-For-one2one-call-with-two-way-frame-saver/src/main/java/org/kurento/tutorial/one2onecall/: CallMediaPipeline.java  FrameSaverPluginProxy.java
Validation/kms_tutorial_apps/APP-Java-For-player-with-one-way-frame-saver/src/main/java/org/kurento/module/: FramesavervideofilterModuleInfo.java
Validation/kms_tutorial_apps/APP-Java-For-player-with-one-way-frame-saver/src/main/java/org/kurento/module/framesavervideofilter/: FrameSaverVideoFilter.java
Validation/kms_tutorial_apps/APP-Java-For-player-with-one-way-frame-saver/src/main/resources/static/: index.html
(+2 files in other folders)
